// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<SecurityRoomSettingsTab /> history visibility uses shared as default history visibility when no state event found 1`] = `
<fieldset
  class="mx_SettingsFieldset"
>
  <legend
    class="mx_SettingsFieldset_legend"
  >
    Who can read history?
  </legend>
  <div
    class="mx_SettingsFieldset_description"
  >
    <div
      class="mx_SettingsSubsection_text"
    >
      <span>
        Changes won't affect past messages, only new ones. 
        <a
          class="mx_ExternalLink"
          href="https://element.io/en/help#e2ee-history-sharing"
          rel="noreferrer noopener"
          target="_blank"
        >
          Learn more
          <svg
            class="mx_ExternalLink_icon"
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 3h6a1 1 0 1 1 0 2H5v14h14v-6a1 1 0 1 1 2 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2"
            />
            <path
              d="M15 3h5a1 1 0 0 1 1 1v5a1 1 0 1 1-2 0V6.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L17.586 5H15a1 1 0 1 1 0-2"
            />
          </svg>
        </a>
      </span>
    </div>
  </div>
  <div
    class="mx_SettingsFieldset_content"
  >
    <label
      class="mx_StyledRadioButton mx_StyledRadioButton_enabled"
    >
      <input
        id="historyVis-invited"
        name="historyVis"
        type="radio"
        value="invited"
      />
      <div>
        <div />
      </div>
      <div
        class="mx_StyledRadioButton_content"
      >
        Members since invited
      </div>
      <div
        class="mx_StyledRadioButton_spacer"
      />
    </label>
    <label
      class="mx_StyledRadioButton mx_StyledRadioButton_enabled mx_StyledRadioButton_checked"
    >
      <input
        checked=""
        id="historyVis-shared"
        name="historyVis"
        type="radio"
        value="shared"
      />
      <div>
        <div />
      </div>
      <div
        class="mx_StyledRadioButton_content"
      >
        Members (full history)
      </div>
      <div
        class="mx_StyledRadioButton_spacer"
      />
    </label>
  </div>
</fieldset>
`;

exports[`<SecurityRoomSettingsTab /> join rule handles error when updating join rule fails 1`] = `
<div
  aria-describedby="mx_Dialog_content"
  aria-labelledby="mx_BaseDialog_title"
  class="mx_ErrorDialog mx_Dialog_fixedWidth"
  data-focus-lock-disabled="false"
  role="dialog"
  tabindex="-1"
>
  <div
    class="mx_Dialog_header"
  >
    <h1
      class="mx_Heading_h3 mx_Dialog_title"
      id="mx_BaseDialog_title"
    >
      Failed to update the join rules
    </h1>
  </div>
  <div
    class="mx_Dialog_content"
    id="mx_Dialog_content"
  >
    Unknown failure
  </div>
  <div
    class="mx_Dialog_buttons"
  >
    <button
      class="mx_Dialog_primary"
    >
      OK
    </button>
  </div>
  <div
    aria-label="Close dialog"
    class="mx_AccessibleButton mx_Dialog_cancelButton"
    role="button"
    tabindex="0"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
      />
    </svg>
  </div>
</div>
`;

exports[`<SecurityRoomSettingsTab /> join rule warns when trying to make an encrypted room public 1`] = `
<div
  aria-describedby="mx_Dialog_content"
  aria-labelledby="mx_BaseDialog_title"
  class="mx_QuestionDialog mx_Dialog_fixedWidth"
  data-focus-lock-disabled="false"
  role="dialog"
  tabindex="-1"
>
  <div
    class="mx_Dialog_header"
  >
    <h1
      class="mx_Heading_h3 mx_Dialog_title"
      id="mx_BaseDialog_title"
    >
      Are you sure you want to make this encrypted room public?
    </h1>
  </div>
  <div
    class="mx_Dialog_content"
    id="mx_Dialog_content"
  >
    <div>
      <p>
         
        <span>
          <strong>
            It's not recommended to make encrypted rooms public.
          </strong>
           It will mean anyone can find and join the room, so anyone can read messages. You'll get none of the benefits of encryption. Encrypting messages in a public room will make receiving and sending messages slower.
        </span>
         
      </p>
      <p>
         
        <span>
          To avoid these issues, create a 
          <div
            class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_link_inline"
            role="button"
            tabindex="0"
          >
             
            new public room
             
          </div>
           for the conversation you plan to have.
        </span>
         
      </p>
    </div>
  </div>
  <div
    class="mx_Dialog_buttons"
  >
    <span
      class="mx_Dialog_buttons_row"
    >
      <button
        data-testid="dialog-cancel-button"
        type="button"
      >
        Cancel
      </button>
      <button
        class="mx_Dialog_primary"
        data-testid="dialog-primary-button"
        type="button"
      >
        OK
      </button>
    </span>
  </div>
  <div
    aria-label="Close dialog"
    class="mx_AccessibleButton mx_Dialog_cancelButton"
    role="button"
    tabindex="0"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
      />
    </svg>
  </div>
</div>
`;
